# curies

./: .bumpversion.cfg  .cruft.json  .gitignore  .readthedocs.yml  MANIFEST.in  README.md  README.md.rej  codecov.yml  docker-compose.yml  pyproject.toml  pyproject.toml.rej  setup.cfg  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: tests.yml
docs/: make_schema.py  schema.json
docs/source/: api.rst  cli.rst  conf.py  converter_with_preprocessing.rst  database.rst  dataframe.rst  discovery.rst  index.rst  index.rst.rej  installation.rst  mapping_service.rst  preprocessing.rst  reconciliation.rst  struct.rst  triples.rst  tutorial.rst  typing.rst  usage.rst  w3c.rst  web.rst
docs/source/services/: index.rst  mapping_service.rst  resolver_service.rst
notebooks/: Data Science Demo.ipynb
src/curies/: __init__.py  __main__.py  _pydantic_compat.py  _sssom_exploration.py  api.py  bulk.py  cli.py  database.py  dataframe.py  discovery.py  hash_triple.py  mapping_service.py  metamodel.py  mixins.py  preprocessing.py  rdflib_custom.py  reconciliation.py  report.py  resolver_service.py  sources.py  trie.py  triples.py  typr.py  utils.py  version.py  vocab.py  vocabulary.py  w3c.py  web.py  wrapped.py  xx.py
src/curies/mapping_service/: __init__.py  __main__.py  api.py  mapping_service.py  rdflib_custom.py  rdflib_custom_postprocessor.py  utils.py
src/curies/triples/: __init__.py  filters.py  hash_utils.py  io.py  model.py  ops.py
tests/: __init__.py  cases.py  constants.py  test_api.py  test_data_science.py  test_database.py  test_dataframe.py  test_discovery.py  test_federated_sparql.py  test_hash_triple.py  test_io.py  test_mapping_service.py  test_metamodel.py  test_mixins.py  test_preprocessing.py  test_reconciliation.py  test_resolver_service.py  test_sparql.py  test_struct.py  test_triples.py  test_types.py  test_version.py  test_w3c.py  test_web.py  test_wrapped.py
tests/resources/: Dockerfile  init_triplestores.sh  invalid_curies.txt  invalid_prefixes.txt  valid_curies.txt  valid_prefixes.txt
tests/test_triples/: __init__.py  test_filter.py  test_models.py  test_ops.py
