##########################
# Setup.py Configuration #
##########################
[metadata]
name = curies
version = 0.7.4
description = Idiomatic conversion between URIs and compact URIs (CURIEs).
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cthoyt/curies
download_url = https://github.com/cthoyt/curies/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/curies/issues
    Source Code = https://github.com/cthoyt/curies

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    snekpack
    cookiecutter
    semantic web
    compact uniform resource identifiers
    uniform resource identifiers
    curies

[options]
install_requires =
    pytrie
    pydantic
    requests

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
pandas =
    pandas
flask =
    flask
    defusedxml
fastapi =
    fastapi
    python-multipart
    httpx
    defusedxml
    uvicorn
rdflib =
    rdflib
docs =
    sphinx
    sphinx-rtd-theme
    sphinx_automodapi

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = curies
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/curies
    .tox/*/lib/python*/site-packages/curies

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__
    ...

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
    S113 # Requests call without timeout
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
per-file-ignores =
    src/curies/cli.py:DAR101,DAR201
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    curies
    tests
